Bug fixes and improvements.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     //custom toast msg
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
+    implementation 'com.github.joshuadeguzman:Spanly:-SNAPSHOT'
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
