Confirm escrow validity of a new Contract. Fix notification body null issue. Slide to save changes button. Other bug fixes and improvements.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.androdevlinux.percy.stackingsats"
@@ -115,6 +115,8 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
     implementation 'com.github.joshuadeguzman:Spanly:-SNAPSHOT'
+
+    implementation "com.ncorti:slidetoact:0.9.0"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
